--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -655,6 +655,8 @@
       left: 50%
       top: 125px
       margin-left: -75px
+   .news__form button p
+      color: #F0EBE6
 @media screen and (max-width: 767px)
    .container
       max-width: 540px !important
@@ -863,6 +865,8 @@
       font-family: 'Gilroy'
    .calc__block span
       font-size: 14px
+   .header progress
+      bottom: 80px
 @media screen and (max-width: 576px)
    button:active, button:focus 
       outline: none
@@ -1146,7 +1150,7 @@
    .lay .tabs__nav button:nth-child(2):before, .lay .tabs__nav button:nth-child(2):after, .lay .tabs4 .tabs__btn:nth-child(2):before, .lay .tabs5 .tabs__btn:nth-child(2):before, .lay .tabs6 .tabs__btn:nth-child(2):before, .lay .tabs7 .tabs__btn:nth-child(2):before, .lay .tabs4 .tabs__btn:nth-child(2):after, .lay .tabs5 .tabs__btn:nth-child(2):after, .lay .tabs6 .tabs__btn:nth-child(2):after, .lay .tabs7 .tabs__btn:nth-child(2):after
       top: 10px
    .lay .lay__link
-      height: 220px
+      height: max-content
    .lay .swip
       height: 350px
    .lay .swip .swiper-slide:after
@@ -1253,6 +1257,8 @@
       object-position: 0px bottom
    .popup__fig
       display: none
+   .tabs__nav, .another__area, .calc__flex
+      overflow-y: hidden
 @media screen and (max-width: 400px)
    .info__area
       top: 241px
