--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -5,7 +5,7 @@ body
    font-weight: 400
    font-size: 16px
    line-height: 18px
-   cursor: url(/img/cursor.svg), auto !important
+   cursor: url(/img/arrr.svg)
 a
    text-decoration: none
    box-sizing: border-box
@@ -110,6 +110,8 @@ html *::-webkit-scrollbar-track
 html *::-webkit-scrollbar-thumb 
    background-color: $green
    border-radius: 6px
+section 
+   cursor: url(../img/cursor.png), auto
 .btn 
    display: flex
    align-items: center
@@ -121,10 +123,17 @@ html *::-webkit-scrollbar-thumb
    border: 1px solid rgba(240, 235, 230, 0.4)
    border-radius: 100px
    padding: 0 4px 0 32px
-   color: rgb(240, 235, 230)
-   font-size: 16px
-   font-weight: 400
-   line-height: 18px
+   overflow: hidden
+   position: relative
+   p 
+      transition: 0.5s 
+      font-size: 16px !important
+      font-weight: 400 !important
+      line-height: 18px !important
+      position: relative
+      color: rgb(240, 235, 230)
+      font-family: 'Gilroy', sans-serif !important
+      z-index: 3
    div
       display: flex
       align-items: center
@@ -133,22 +142,36 @@ html *::-webkit-scrollbar-thumb
       height: 48px
       border-radius: 100px
       background: rgba(240, 235, 230, 0.1)
-      transition: 0.5s
-   &:hover 
-      color: $green
-      background: white
+      transition: 2s
+      position: relative
+      z-index: 2
       .svg 
+         transition: 2s 
+   &:after 
+      content: ""
+      display: block
+      position: absolute
+      width: 0
+      left: 0
+      background: rgb(240, 235, 230)
+      top: 0
+      height: 100%
+      opacity: 0
+      transition: 0.8s
+   &:hover 
+      background: transparent
+      div 
+         background: rgba(43, 87, 52, 0.1)
+      &:after 
+         opacity: 1
+         width: 100%
+   &:hover 
+      p 
+         color: black
+      .svg
+         transition: 2s 
          path 
             fill: $green
    &_2 
       background: transparent
       border: 1px solid rgba(240, 235, 230, 0.4)
-      &:hover 
-         background: rgb(43, 87, 52)
-         color: rgb(240, 235, 230)
-         border: 1px solid rgb(43, 87, 52)
-         div
-            background: rgba(240, 235, 230, 0.1)
-            .svg 
-               path 
-                  fill: rgb(240, 235, 230)
